[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py"
]

[project]
name = "PPA-Launchpad-Tools"
version = "v2026.03.05.1"
dependencies = [
    "launchpadlib",
    "keyring",
]
    
authors = [{ name="Nicola Ferralis", email="feranick@hotmail.com" },]
description = "PPA Launchpad tools to visualize statistics and perform cleanup"
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
ppa_cleanup = "ppa_cleanup:ppa_cleanup"
ppa_stats = "ppa_stats:ppa_stats"

[project.urls]
Homepage = "https://github.com/feranick/PPA-Launchpad-tools"
Issues = "https://github.com/feranick/PPA-Launchpad-tools/issues"
